# nvcc4jupyter

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  nvcc_plugin.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/workflows/: code-quality-master.yml  code-quality-pr.yml  publish-to-pypi.yml  test.yml
common/: helper.py
docs/: make.bat  requirements.txt
docs/source/: conf.py  index.rst  magics.rst  notebooks.rst  usage.rst
notebooks/: README.md  compiling-with-external-libraries.ipynb
notebooks/cuda_training_series/: 01-intro-to-cuda-cpp.ipynb
nvcc4jupyter/: __init__.py  parsers.py  path_utils.py  plugin.py  setup_env.py
nvcc_plugin/: __init__.py  errors.py  magics.py
tests/: conftest.py  requirements.txt  test_path_utils.py  test_plugin.py  test_v1.py
tests/fixtures/: fixtures.py
tests/fixtures/compiler/: cpp_17.cu  opencv.cu
tests/fixtures/multiple_files/: hello.cu  main.cu
tests/fixtures/scripts/: ncu  nsys  searchforme
tests/fixtures/single_file/: hello.cu
v1/: v1.py
v2/: v2.py
